Add Layout file to DRY the front end code

--- a/WordCounter/Views/tbd.html
+++ b/WordCounter/Views/tbd.html
@@ -1,5 +1,9 @@
+@{
+  Layout = "_Layout";
+}
+
 @using WordCounter.Models;
 
 <h1>The Number of time the word is present in the sentence is @Model.CheckMatch()</h1>
 
-  <p><a href='/'>Try with a new sentence and word </a></p>
+<p><a href='/'>Try with a new sentence and word </a></p>
