--- a/WordCounter/Views/Home/Index.cshtml
+++ b/WordCounter/Views/Home/Index.cshtml
@@ -1,13 +1,9 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Word Counter</title>
-  <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
-</head>
-<body>
+@{
+  Layout = "_Layout";
+}
+
   <div class="container">
     <h1>Hello, Let's Play the WORDCOUNTER game!</h1>
     <a href='/word-counter/new'>Click to enter the word and the sentence<a/>
     </div>
-  </body>
-  </html>
+  
