--- a/WordCounter/Views/WordCounter/New.cshtml
+++ b/WordCounter/Views/WordCounter/New.cshtml
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset='utf-8'>
-    <title>Word Counter</title>
-  </head>
-  <body>
+@{
+  Layout = "_Layout";
+}
+
     <h1>Lets Start the Game</h1>
 
     <form action="/check-match" method="post">
@@ -15,6 +12,3 @@
 
       <button type="submit">Search</button>
     </form>
-
-  </body>
-</html>
