add image to the landing page

--- a/WordCounter/Views/Home/Index.cshtml
+++ b/WordCounter/Views/Home/Index.cshtml
@@ -2,8 +2,9 @@
   Layout = "_Layout";
 }
 
+
   <div class="container">
-    <h1>Hello, Let's Play the WORDCOUNTER game!</h1>
-    <a href='/word-counter/new'>Click to enter the word and the sentence<a/>
-    </div>
-  
+  <h2><center><a href='/word-counter/new'>Let's Play<a/>
+  </center></h2>
+  <center><img src='~/img/loading.gif'/></center>
+  </div>
