--- a/WordCounter/Views/WordCounter/Show.cshtml
+++ b/WordCounter/Views/WordCounter/Show.cshtml
@@ -3,7 +3,23 @@
 }
 
 @using WordCounter.Models;
+<div class = "container">
+<div class = "row">
+<div class = "col-md-6"><h4>The sentence you have entered </h4></div>
+<div class = "col-md-6"><h4><i>@Model.GetSentence()</i></h4></div>
+</div>
 
-<h1>The Number of time the word is present in the sentence is @Model.CheckMatch()</h1>
+<div class = "row">
+<div class = "col-md-6"><h4>The word you have entered </h4></div>
+<div class = "col-md-6"><h4><i>@Model.GetWord()</i></h4></div>
+</div>
 
-<p><a href='/'>Try with a new sentence and word </a></p>
+<div class = "row">
+<div class = "col-md-12">
+<h2><i>@Model.GetWord()</i> occurs <b>@Model.CheckMatch()</b> times </h2><br><br><br>
+<br><br><br><br><br>
+</div>
+</div>
+<p><a href='/word-counter/new'><h2><center>Try with a new sentence and word
+</center></h2></a></p>
+</div>
